--- a/MicroServices/PostService/PostService.csproj
+++ b/MicroServices/PostService/PostService.csproj
@@ -11,4 +11,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Data\" />
+    <Folder Include="DTOs\" />
+    <Folder Include="Models\" />
+    <Folder Include="Profiles\" />
+  </ItemGroup>
+
 </Project>
