--- a/MicroServices/UserServices/appsettings.json
+++ b/MicroServices/UserServices/appsettings.json
@@ -6,4 +6,8 @@
     }
   },
   "AllowedHosts": "*"
+  ,
+    "ConnectionStrings": {
+      "DefaultConnection": "server=localhost;database=forum_user_role;user=root;password=;"
+    }
 }
