--- a/4roomforum/4roomforum.csproj
+++ b/4roomforum/4roomforum.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>_4roomforum</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+  </ItemGroup>
+
 </Project>
