--- a/4roomforum/appsettings.json
+++ b/4roomforum/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Authentication": {
+    "Google": {
+      "ClientId": "393169759792-esmq6f59pt4ghgpgqdkvjd4t49p0otk2.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
   "AllowedHosts": "*"
+  
 }
