--- a/4roomforum/appsettings.json
+++ b/4roomforum/appsettings.json
@@ -11,6 +11,14 @@
       "ClientSecret": "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"
     }
   },
+  
+    "EmailSettings": {
+      "SMTPHost": "smtp.gmail.com",
+      "SMTPPort": 587,
+      "Email": "csharphotel@gmail.com",
+      "Password": "j2eePassword"
+    }
+  ,
   "AllowedHosts": "*"
   
 }
